load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

jest_test(
    name = "test",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

jest_test(
    name = "test_user_data",
    data = [
        "index.js",
        "index.test.js",
        # should be able to add jest-cli & jest-junit explicitly in data
        "//:node_modules/jest-cli",
        "//:node_modules/jest-junit",
    ],
    node_modules = "//:node_modules",
)

jest_test(
    name = "js_config_test",
    config = "jest.config.js",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

jest_test(
    name = "cjs_config_test",
    config = "jest.config.cjs",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

jest_test(
    name = "mjs_config_test",
    config = "jest.config.mjs",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

jest_test(
    name = "json_config_test",
    config = "jest.config.json",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

jest_test(
    name = "gen_config_test",
    config = "gen.config.json",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

genrule(
    name = "gen_config",
    testonly = True,
    srcs = ["jest.config.json"],
    outs = ["gen.config.json"],
    cmd = "cp $(location :jest.config.json) \"$@\"",
)

jest_test(
    name = "target_config_test",
    config = ":gen_config",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)

jest_test(
    name = "other_target_config_test",
    config = "//jest/tests/configs:basic",
    data = [
        "index.js",
        "index.test.js",
    ],
    node_modules = "//:node_modules",
)
