"""Shows how to setup jest_test to update snapshots with a snapshots files list.
"""

load("@aspect_rules_jest//jest:defs.bzl", "jest_test")

jest_test(
    name = "test",
    config = "jest.config.js",
    data = [
        ".babelrc.js",
        "greetings.js",
        "greetings.test.js",
        "link.js",
        "link.test.js",
        "//example:node_modules/@babel/core",
        "//example:node_modules/@babel/preset-env",
        "//example:node_modules/@babel/preset-react",
        "//example:node_modules/babel-jest",
        "//example:node_modules/react",
        "//example:node_modules/react-test-renderer",
    ],
    # To update snapshots run,
    #    bazel run //example/snapshots_files:test_update_snapshots
    snapshots = glob(["__snapshots__/*.snap"]),
)
