load("@aspect_bazel_lib//lib:utils.bzl", bazel_lib_utils = "utils")
load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files([
    "jest_config_template.mjs",
    "bazel_haste_map.cjs",
    "bazel_sequencer.cjs",
    "bazel_snapshot_reporter.cjs",
    "bazel_snapshot_resolver.cjs",
])

sh_binary(
    name = "merger",
    srcs = ["merger.sh"],
    visibility = ["//visibility:public"],
)

# keep
bzl_library(
    name = "jest_test",
    srcs = ["jest_test.bzl"],
    visibility = ["//jest:__subpackages__"],
    deps = [
        "@aspect_bazel_lib//lib:copy_to_bin",
        "@aspect_rules_js//js:libs",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "maybe",
    srcs = ["maybe.bzl"],
    visibility = [
        "//:__pkg__",
        "//jest:__subpackages__",
    ],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ] + (["@bazel_tools//tools/build_defs/repo:cache.bzl"] if bazel_lib_utils.is_bazel_7_or_greater() else []),
)
