load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

exports_files([
    "jest_config_template.mjs",
    "bazel_haste_map.cjs",
    "bazel_sequencer.cjs",
    "bazel_snapshot_reporter.cjs",
    "bazel_snapshot_resolver.cjs",
])

sh_binary(
    name = "merger",
    srcs = ["merger.sh"],
    visibility = ["//visibility:public"],
)

# keep
bzl_library(
    name = "jest_test",
    srcs = ["jest_test.bzl"],
    visibility = ["//jest:__subpackages__"],
    deps = [
        "@aspect_rules_js//js:libs",
        "@bazel_lib//lib:copy_to_bin",
        "@bazel_skylib//lib:dicts",
        "@bazel_skylib//lib:paths",
    ],
)
